--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-Hant">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>症狀統計表</title>
 <style>
   body { font-family: Arial, sans-serif; margin: 20px; }
@@ -9,7 +10,14 @@
   th, td { border: 1px solid #ccc; padding: 8px; text-align: center; vertical-align: middle; }
   th { background-color: #f2f2f2; }
   .checkbox-group { display: flex; flex-wrap: wrap; }
-  .checkbox-item { width: 20%; box-sizing: border-box; padding: 5px; text-align: left; }
+  .checkbox-item { width: 20%; box-sizing: border-box; padding: 5px; text-align: left; font-size: 1rem; }
+
+  @media (max-width: 768px) {
+    .checkbox-item { width: 50%; font-size: 1.2rem; }
+  }
+  @media (max-width: 480px) {
+    .checkbox-item { width: 100%; font-size: 1.4rem; }
+  }
 </style>
 </head>
 <body>
